fixed results return so its centered and wrapped, changed border and shadow

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: grey;
+  display: flex;
 }
 
 #title {
@@ -15,8 +16,11 @@ body {
 
 .container {
     margin: auto;
-    border: 2px solid black;
-    
+    /* border: 2px solid black; */
+    align-items: center;
+    width: 75%;
+    /* display: flex; */
+    /* flex-direction: column; */
     /* border-radius: 20px; */
 }
 
@@ -37,20 +41,23 @@ hr {
 }
 
 #gifView {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
+
 .results {
   display: flex;
   flex-direction: column;
+  /* flex: auto; */
   align-items: center;
-  border: 2px solid black;
+  border: 2px ridge white;
   border-radius: 5px;
   width: 300px;
   height: 300px;
   margin: 2px;
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(231, 235, 16, 0.623);
+    0 17px 50px 0 rgba(214, 214, 214, 0.753);
 }
 
 img {
